# Cardio

./: .gitignore  .pre-commit-config.yaml  BRAINSTORM.md  Dockerfile  Makefile  README.md  TODO.md  commitlint.config.js  debug_env.py  debugging.py  drqn_tutorial.ipynb  drqn_tutorial.py  gatherer.py  iet_buffer.py  jax_dqn.py  jax_testing.py  main.py  minari_testing.py  mpo.py  mpo_testing.py  outdated_a2c.py  proof_mpo.py  pyproject.toml  run_dummy.py  runner.py  sb3_benchmarking.py  setup.py  shapes_envpool.py  stub_awr.py  stub_ddpg.py  stub_dqn.py  stub_drqn.py  stub_per.py  stub_qlearning.py  stub_qrdqn.py  stub_reinforce.py  stub_rwr.py  stub_td3.py  stub_td3_rnd.py  test_envpool.py  (+8 more)
WIP/: debug_env.py  debugging.py  jax_testing.py  minari_testing.py  mpo_testing.py  outdated_a2c.py  proof_mpo.py  sb3_benchmarking.py  slv_dqn.py  stub_awr.py  stub_drqn.py  stub_qrdqn.py  stub_reinforce.py  stub_rwr.py  stub_td3_rnd.py  test_q_lambda.py  testing_a2c.py  testing_envpool.py  testing_qtopt.py  testing_rainbow.py  testing_sac.py
async_rl/: async_dqn.py  continuous_example.py  example.py  pytorch_async_env.py
benchmarking/: der_atari.py  der_envpool.py  drq_e_atari.py  jax_minatar.py  nature.py  revisit_rainbow.py  train_minatar.py
cardio_rl/: __init__.py  agent.py  evaluation.py  gatherer.py  logger.py  module.py  runner.py  toy_env.py  tree.py  types.py  utils.py
docs/: _readme.md
examples/: a2c.py  dqn.py  ppo.py  reinforce.py  stub_a2c.py  stub_reinforce.py  td3.py
implicit_event_tables/: er_buffer.py  iet_buffer.py  k_1_control.txt  k_4.txt  networks.py  (+6 more)
(+112 files in other folders)
